tests/requests/invalid/001.py
#
# This file is part of gunicorn released under the MIT license.
# See the NOTICE for more information.

from gunicorn.http.errors import NoMoreData
request = NoMoreData